<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/data"
            android:text="@string/item_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/hora"
            android:text="@string/item_hora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/data"/>

    <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/local"
            android:text="@string/item_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hora"/>

    <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/acao"
            android:text="@string/item_acao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/local"/>

    <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/mensagem"
            android:text="@string/item_mensagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/acao"/>

    <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/quando"
            android:text="@string/item_quando"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mensagem"/>

</RelativeLayout>
