<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.CadastrarActivity">

    <TextView
            android:layout_margin="50dp"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/edtxt_email"
            android:gravity="center"
            android:text="@string/textoRecuperarSenha"
    />
    <EditText
            android:id="@+id/edtxt_email"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:layout_below="@+id/edtxt_nome"
            android:layout_centerInParent="true"
    />
    <Button
            android:id="@+id/btn_login"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/redefinir"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"

            android:layout_marginBottom="50dp"
    />


</RelativeLayout>